# lector

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  Doxyfile.txt  LICENSE  LICENSE.md  MODULE.bazel  README.md  args.cpp  args.hpp  args.test.cpp  configuration.bzl  docs_header.html  docs_main.txt  lector.hpp  lector.test.cpp  meson.build
.github/: dependabot.yaml
.github/workflows/: Linux.yaml  Windows.yaml  macOS.yaml  tests.yaml
docs/: Doxyfile.txt  annotated.html  arguments_8hpp_source.html  classes.html  classlector_1_1Argument-members.html  classlector_1_1Argument.html  classlector_1_1Arguments-members.html  classlector_1_1Arguments.html  dir_e9fe47d4fe810dda4766224e0248905d.html  files.html  footer.html  functions.html  functions_func.html  functions_vars.html  header.html  index.html  main_page.txt  menudata.js  namespacelector.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  parse_8hpp_source.html  print_8hpp_source.html  structlector_1_1Configuration-members.html  structlector_1_1Configuration.html  style.css  text_8hpp_source.html
docs/html/: annotated.html  classes.html  classlector_1_1Argument-members.html  classlector_1_1Argument.html  classlector_1_1Arguments-members.html  classlector_1_1Arguments.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_e9fe47d4fe810dda4766224e0248905d.html  files.html  functions.html  functions_func.html  index.html  namespacelector.html  namespacemembers_func.html  namespacemembers_vars.html  style.css  tabs.css
lector/: BUILD.bazel  arguments.hpp  arguments.test.cpp  parse.hpp  parse.test.cpp  print.hpp  print.test.cpp  text.hpp  text.test.cpp
