# Copyright © 2026, Alexandre Coderre-Chabot.

# This file is part of Lector (https://github.com/acodcha/lector), a C++ library for parsing command
# line arguments. Lector is licensed under the MIT License (https://mit-license.org).

# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
# associated documentation files (the "Software"), to deal in the Software without restriction,
# including without limitation the rights to use, copy, modify, merge, publish, distribute,
# sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# - The above copyright notice and this permission notice shall be included in all copies or
#   substantial portions of the Software.
# - THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
#   BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
#   NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
#   DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM
#   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

CPP_COMPILER_OPTIONS = select({
    "@bazel_tools//src/conditions:windows": [
        "/O2",  # High optimization for MSVC.
        "/W4",  # Strong warnings for MSVC.
        "/std:c++17",  # C++17 standard for MSVC.
    ],
    "//conditions:default": [
        "-O3",  # High optimization for GCC and Clang.
        "-Wall",
        "-Wextra",
        "-Wno-return-type",
        "-Wpedantic",
        "-std=c++17",  # C++17 standard for GCC and Clang.
    ],
})

cc_library(
    name = "arguments",
    hdrs = ["arguments.hpp"],
    copts = CPP_COMPILER_OPTIONS,
    visibility = ["//visibility:public"],
    deps = [
        "//lector:parse",
        "//lector:print",
    ],
)

cc_test(
    name = "arguments_test",
    size = "small",
    srcs = ["arguments.test.cpp"],
    copts = CPP_COMPILER_OPTIONS,
    visibility = ["//visibility:public"],
    deps = [
        "//lector:arguments",
        "//lector:parse",
        "//lector:print",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "parse",
    hdrs = ["parse.hpp"],
    copts = CPP_COMPILER_OPTIONS,
    visibility = ["//visibility:public"],
)

cc_test(
    name = "parse_test",
    size = "small",
    srcs = ["parse.test.cpp"],
    copts = CPP_COMPILER_OPTIONS,
    visibility = ["//visibility:public"],
    deps = [
        "//lector:parse",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "print",
    hdrs = ["print.hpp"],
    copts = CPP_COMPILER_OPTIONS,
    visibility = ["//visibility:public"],
)

cc_test(
    name = "print_test",
    size = "small",
    srcs = ["print.test.cpp"],
    copts = CPP_COMPILER_OPTIONS,
    visibility = ["//visibility:public"],
    deps = [
        "//lector:print",
        "@googletest//:gtest_main",
    ],
)
